test/spec_vectors/simd_lane/fail/module_85.wat
(module (func (result v128) (f32x4.replace_lane 0 (v128.const f32x4 0 0 0 0) (i32.const 1))))